--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,3 +1,4 @@
 <h1>title</h1>
 <img src="logo.png" width="100" height="100"> 
- 
+ <img src="logo.png" width="100" height="100"> 
+<img src="logo.png" width="100" height="100"> 
