--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,4 +3,8 @@
 <video src="?" width="100" height="100"> 
 <img src="logo.png" width="100" height="100"> 
 <audio src="??" width="100" height="100"> 
+<audio src="??" width="100" height="100"> 
+<audio src="??" width="100" height="100"> 
+<audio src="??" width="100" height="100"> 
+<audio src="??" width="100" height="100"> 
 
